# cmpe275-mini2

./: .gitignore  CMakeLists.txt  README.md
config/: A.conf  B.conf  C.conf  D.conf  E.conf  F.conf  G.conf  H.conf  I.conf
proto/: basecamp.proto
python/src/: py_node_server,.py
src/client/: basecamp_client.cc  node_stub.cc  node_stub.h
src/common/: config.cc  config.h
src/server/: main.cc  node_service.cc  node_service.h
